k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-app1 # Will be managed by Istio VirtualService
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
